--- a/src/components/general/Dropdown/Dropdown.scss
+++ b/src/components/general/Dropdown/Dropdown.scss
@@ -1,5 +1,6 @@
 .Dropdown {
   position: relative;
+  height: fit-content;
   &__btn {
     display: flex;
     align-items: center;
